# OSDWSStream

./: .gitignore  README.md
HTML/: Canvas.html  MediaSource.html
UDPServer/: UDPServer 2017.sln
UDPServer/UDPServer/: Program.cs  UDPServer.csproj  index.html
UDPServer/UDPServer/Properties/: AssemblyInfo.cs
WSServer/: WSServer.sln
WSServer/WSServer/: Program.cs  WSServer.csproj
WSServer/WSServer/Properties/: AssemblyInfo.cs
WinRendering/: WinRendering.sln
WinRendering/WinRendering/: WinRendering.cpp  WinRendering.vcxproj  WinRendering.vcxproj.filters
src/: CMakeLists.txt  DinoServer.cpp  DinoServer.h  TCPServer.cpp  TCPServer.hpp  main.cpp  mainWin.cpp  server_http.hpp  server_http_impl.hpp  server_https.hpp  server_ws.hpp  server_ws_impl.hpp  server_wss.hpp
src/HTML/: Canvas.html  MediaSource.html
